[Fission] Weirdness when going back in some cases (temporarily disable bfcache for Fission-enabled tabs)
Categories
(Core :: DOM: Navigation, defect, P1)
Tracking
()
People
(Reporter: Jamie, Assigned: nika)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
Sorry if this is the wrong component. This scenario causes some weird a11y issues, but in trying to debug them, I discovered that this seems to have implications wider than just a11y.
STR:
- Ensure Fission is enabled.
- Open this URL:
data:text/html,<iframe src="https://google.com/notfound"> - Examine the tab tooltip.
- Observe: The tab tooltip lists two pids; e.g.
(pid 19620) [F 936]
- Observe: The tab tooltip lists two pids; e.g.
- Now open
about:blankin the same tab. - Press alt+leftArrow to go back. Observe that we return to the document from step 2.
- Examine the tab tooltip.
- Expected: Two pids as before.
- Actual: Only one pid is listed; e.g.
(pid 19620) [F ]
- Press control+r to refresh.
- Examine the tab tooltip.
- Observe: The tab tooltip lists two pids as expected.
The a11y impact is that on Windows, the OOP iframe document never seems to be told about its parent COM proxy. I haven't tracked down why yet. However, the fact that this causes the pids to show up incorrectly leads me to believe there is a deeper problem here.
Comment 1•6 years ago
|
||
Nika says session history is known busted with Fission enabled. kmag says there are no active BrowsingContexts in the parent after browsing back.
We should temporarily disable bfcache for Fission-enabled tabs.
We should remember to test this scenario when we re-enable bfcache with Fission. Can we add a test now?
Tracking for Fission dogfooding (M5)
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 2•6 years ago
|
||
I'll post a patch to disable bfcache for documents with remote subframes
| Assignee | ||
Comment 3•6 years ago
|
||
Comment 5•6 years ago
|
||
| bugherder | ||
Updated•6 years ago
|
Comment 6•6 years ago
|
||
I have managed to reproduce this issue using Firefox 74.0a1 (BuildId:20200114214307).
This issue is verified fixed using Firefox 75.0a1 (BuildId:20200219095352) and Firefox 76.0a1 (BuildId:20200322212426) on Windows 10 64bit, macOS 10.14 and Ubuntu 18.04 64bit.
Tested only on nightly builds (since this requires fission to be enabled).
Description
•